# cpp_course

./: .gitignore  CMakeLists.txt  README.md
0x00/: CMakeLists.txt  README.md  makefile
0x00/snippets/: a_helloworld.cpp  a_helloworld_explained.cpp
0x01/: CMakeLists.txt  Makefile  README.md
0x01/snippets/: a_uniform_init.cpp  b_console_io.cpp  c_primitives.cpp  d_strings.cpp  e_if_for_while.cpp  f_functions.cpp  study_cin.cpp  study_for.cpp  study_int8.cpp  study_println.cpp  study_string.cpp  study_switch.cpp  westrosecliff.cpp
0x01/solutions/: beverlyhollow_one_solution.cpp  bluecanyon_one_solution.cpp  pinepoint_one_solution.cpp  westrosecliff_one_solution.cpp
0x02/: CMakeLists.txt  README.md
0x02/snippets/: a_consts.cpp  a_references.cpp  b_structs.cpp  c_call_by_ref.cpp  c_references.cpp  d_call_by_ref.cpp  d_exception.cpp  e_arrays.cpp  e_exception.cpp  f_arrays.cpp  study_auto.cpp  study_stoi_stod.cpp  study_trailingreturn.cpp  work_stoi_stod.cpp
0x02/solutions/: bakerriver_one_solution.cpp  elkford_one_solution.cpp  harshire_one_solution.cpp  sanborncliff_one_solution.cpp
0x03/: CMakeLists.txt  README.md
0x03/snippets/: a_simple_class.cpp  b_explicit_const.cpp  c_copy_assignment.cpp  d_ctor_dtor_throw.cpp  e_getter_setter.cpp  f_raii.cpp  study_aggregate.cpp  study_properties.cpp
0x03/solutions/: coral_creek_one_solution.cpp  luckyrock_one_solution.cpp  meadowriver_one_solution.cpp  ravencastle_one_solution.cpp  stoneridge_one_solution.cpp
0x04/: CMakeLists.txt  README.md
0x04/snippets/: a_nodiscard.cpp  b_stream_insertion.cpp  c_string_views.cpp  d_iterators.cpp  e_first_generics.cpp  f_containers.cpp  f_std_containers.cpp  study_more_generics.cpp  study_more_iterators.cpp  study_vector.cpp
0x04/solutions/: ashfield_one_solution.cpp  oakberg_one_solution.cpp  sparrowtown_one_solution.cpp
0x05/: CMakeLists.txt  README.md
0x05/snippets/: a_asm_view.cpp  b_first_pointers.cpp  c_more_pointers.cpp  d_arrays_and_pointers.cpp  e_swap.cpp  f_this.cpp
0x05/solutions/: copperview_one_solution.cpp  dontdothisorilltellyourmum_one_solution.cpp  kengate_one_solution.cpp  mcallenspring_one_solution.cpp
0x06/: CMakeLists.txt  README.md
0x06/snippets/: a_const.cpp  b_new_delete.cpp  c_unique_ptr.cpp  d_smallbuffer_example.cpp  e_addressof.cpp  study_2d_arrays.cpp  study_alloc_and_free.cpp
0x06/solutions/: mcallenspringsmart_one_solution.cpp  reedsfield_one_solution.cpp  rosepond_one_solution.cpp  southbirdsgale_one_solution.cpp
0x07/: CMakeLists.txt  README.md
0x07/snippets/: a_statics.cpp  b_friends.cpp  c_operators_1.cpp  d_operators_2.cpp  e_operators_3.cpp
0x07/solutions/: deerwoods_one_solution.cpp  dovertown_one_solution.cpp  heartland_one_solution.cpp
0x08/: CMakeLists.txt  README.md
0x08/snippets/: a_single_inheritance.cpp  b_modifier.cpp  c_virtual.cpp  d_abstract.cpp  e_multiple_inheritance.cpp  study_vtable.cpp  study_windows.cpp
0x08/solutions/: petersmines_one_solution.cpp  unionbeach_one_solution.cpp
0x09/: CMakeLists.txt  README.md
0x09/snippets/: a_casts.cpp  b_enums.cpp  c_specializations.cpp  d_more_smartptrs.cpp  e_in_out.cpp
0x09/solutions/: banrockburn_one_solution.cpp  clarcton_one_solution.cpp  eastbourne_one_solution.cpp  openshaw_one_solution.cpp  wintervale_one_solution.cpp
0x0a/: CMakeLists.txt  README.md
0x0a/snippets/: a_lambdas.cpp  b_functions.cpp  c_algorithms.cpp  d_threads.cpp  e_mutex.cpp
0x0a/solutions/: coldwall_one_solution.cpp  kreley_one_solution.cpp  pleim_one_solution.cpp  roarport_one_solution.cpp  westwheat_one_solution.cpp  yrouwood_one_solution.cpp
0x0b/: CMakeLists.txt  README.md
0x0b/snippets/: a_condition_variables.cpp  b_smart_ptr_v1.cpp  c_smart_ptr_v2.cpp  d_ui_lib.cpp  d_ui_lib.hpp  d_use_ui_lib.cpp
0x0x_am1/: CMakeLists.txt  README.md
0x0x_am1/solutions/: exam1_fail.cpp  exam1_one_solution.cpp  prompt.md
0x0x_am2/: CMakeLists.txt  README.md
0x0x_am2/solutions/: chatgpt52_errors.json  chatgpt52_full.json  exam2_one_solution.cpp  exam2_with_errors.cpp  prompt.md
0x0x_am_prep/: CMakeLists.txt  README.md  a1234_Matrnr_Name.cpp
aoc/: CMakeLists.txt  README.md
aoc/solutions/: aoc.cpp  aoc.h  aoc.hpp  aoc_conversions.hpp  aoc_field.hpp  aoc_input.hpp  aoc_solution.hpp  aoc_uses.hpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  dayXX.cpp  prep.cpp
