# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_uniform_init snippets/a_uniform_init.cpp)
add_executable(b_console_io snippets/b_console_io.cpp)
add_executable(c_primitives snippets/c_primitives.cpp)
add_executable(d_strings snippets/d_strings.cpp)
add_executable(e_if_for_while snippets/e_if_for_while.cpp)
add_executable(f_functions snippets/f_functions.cpp)

add_executable(westrosecliff.cpp solutions/westrosecliff.cpp)

add_executable(study_for snippets/study_for.cpp)
add_executable(study_int8 snippets/study_int8.cpp)
add_executable(study_string snippets/study_string.cpp)
add_executable(study_switch snippets/study_switch.cpp)
add_executable(study_cin snippets/study_cin.cpp)

add_executable(westrosecliff_one_solution solutions/westrosecliff_one_solution.cpp)
add_executable(beverlyhollow_one_solution solutions/beverlyhollow_one_solution.cpp)
add_executable(bluecanyon_one_solution solutions/bluecanyon_one_solution.cpp)
add_executable(pinepoint_one_solution solutions/pinepoint_one_solution.cpp)
