# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_consts snippets/a_consts.cpp)
add_executable(b_structs snippets/b_structs.cpp)
add_executable(c_references snippets/c_references.cpp)
add_executable(d_call_by_ref snippets/d_call_by_ref.cpp)
add_executable(d_exception snippets/e_exception.cpp)
add_executable(f_arrays snippets/f_arrays.cpp)

add_executable(study_auto snippets/study_auto.cpp)
add_executable(study_stoi_stod snippets/study_stoi_stod.cpp)
add_executable(study_trailingreturn snippets/study_trailingreturn.cpp)

add_executable(bakerriver_one_solution solutions/bakerriver_one_solution.cpp)
add_executable(elkford_one_solution solutions/elkford_one_solution.cpp)
add_executable(harshire_one_solution solutions/harshire_one_solution.cpp)
add_executable(sanborncliff_one_solution solutions/sanborncliff_one_solution.cpp)
