# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_nodiscard snippets/a_nodiscard.cpp)
add_executable(b_stream_insertion snippets/b_stream_insertion.cpp)
add_executable(c_string_views snippets/c_string_views.cpp)
add_executable(d_containers_and_iterators snippets/d_containers_and_iterators.cpp)
add_executable(e_first_generics snippets/e_first_generics.cpp)
add_executable(f_std_containers snippets/f_std_containers.cpp)

#add_executable(sol_ashfield exercises/proposed_solutions/sol_ashfield.cpp)
#add_executable(sol_bakeropolis exercises/proposed_solutions/sol_bakeropolis.cpp)
#add_executable(sol_brickgate exercises/proposed_solutions/sol_brickgate.cpp)
#add_executable(sol_hicksbluff exercises/proposed_solutions/sol_hicksbluff.cpp)
#add_executable(sol_oakberg exercises/proposed_solutions/sol_oakberg.cpp)
#add_executable(sol_sparrowtown exercises/proposed_solutions/sol_sparrowtown.cpp)
