# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_nodiscard snippets/a_nodiscard.cpp)
add_executable(b_stream_insertion snippets/b_stream_insertion.cpp)
add_executable(c_string_views snippets/c_string_views.cpp)
add_executable(d_iterators snippets/d_iterators.cpp)
add_executable(e_first_generics snippets/e_first_generics.cpp)
add_executable(f_containers snippets/f_containers.cpp)

add_executable(study_vector snippets/study_vector.cpp)
add_executable(study_more_generics snippets/study_more_generics.cpp)
add_executable(study_more_iterators snippets/study_more_iterators.cpp)

add_executable(oakberg_one_solution solutions/oakberg_one_solution.cpp)
add_executable(ashfield_one_solution solutions/ashfield_one_solution.cpp)
add_executable(sparrowtown_one_solution solutions/sparrowtown_one_solution.cpp)
