# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_asm_view snippets/a_asm_view.cpp)
add_executable(b_first_pointers snippets/b_first_pointers.cpp)
add_executable(c_more_pointers snippets/c_more_pointers.cpp)
add_executable(d_arrays_and_pointers snippets/d_arrays_and_pointers.cpp)
add_executable(e_swap snippets/e_swap.cpp)
add_executable(f_this snippets/f_this.cpp)

add_executable(copperview_one_solution solutions/copperview_one_solution.cpp)
add_executable(kengate_one_solution solutions/kengate_one_solution.cpp)
add_executable(mcallenspring_one_solution solutions/mcallenspring_one_solution.cpp)
add_executable(dontdothisorilltellyourmum_one_solution solutions/dontdothisorilltellyourmum_one_solution.cpp)
