# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_statics snippets/a_statics.cpp)
add_executable(b_friends snippets/b_friends.cpp)
add_executable(c_operators_1 snippets/c_operators_1.cpp)
add_executable(d_operators_2 snippets/d_operators_2.cpp)
add_executable(e_operators_3 snippets/e_operators_3.cpp)

add_executable(deerwoods_one_solution solutions/deerwoods_one_solution.cpp)
add_executable(dovertown_one_solution solutions/dovertown_one_solution.cpp)
add_executable(heartland_one_solution solutions/heartland_one_solution.cpp)
