# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_single_inheritance snippets/a_single_inheritance.cpp)
add_executable(b_modifier snippets/b_modifier.cpp)
add_executable(c_virtual snippets/c_virtual.cpp)
add_executable(d_abstract snippets/d_abstract.cpp)
add_executable(e_multiple_inheritance snippets/e_multiple_inheritance.cpp)

add_executable(study_vtable snippets/study_vtable.cpp)
add_executable(study_windows snippets/study_windows.cpp)

add_executable(unionbeach_one_solution solutions/unionbeach_one_solution.cpp)
add_executable(petersmines_one_solution solutions/petersmines_one_solution.cpp)
