# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_casts snippets/a_casts.cpp)
add_executable(b_enums snippets/b_enums.cpp)
add_executable(c_specializations snippets/c_specializations.cpp)
add_executable(d_more_smartptrs snippets/d_more_smartptrs.cpp)
add_executable(e_in_out snippets/e_in_out.cpp)

add_executable(eastbourne_one_solution solutions/eastbourne_one_solution.cpp)
add_executable(openshaw_one_solution solutions/openshaw_one_solution.cpp)
add_executable(banrockburn_one_solution solutions/banrockburn_one_solution.cpp)
add_executable(wintervale_one_solution solutions/wintervale_one_solution.cpp)
add_executable(clarcton_one_solution solutions/clarcton_one_solution.cpp)
