# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_lambdas snippets/a_lambdas.cpp)
add_executable(b_functions snippets/b_functions.cpp)
add_executable(c_algorithms snippets/c_algorithms.cpp)
add_executable(d_threads snippets/d_threads.cpp)
add_executable(e_mutex snippets/e_mutex.cpp)
