# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

add_executable(a_lambdas snippets/a_lambdas.cpp)
add_executable(b_functions snippets/b_functions.cpp)
add_executable(c_algorithms snippets/c_algorithms.cpp)
add_executable(d_threads snippets/d_threads.cpp)
add_executable(e_mutex snippets/e_mutex.cpp)

add_executable(roarport_one_solution solutions/roarport_one_solution.cpp)
add_executable(kreley_one_solution solutions/kreley_one_solution.cpp)
add_executable(yrouwood_one_solution solutions/yrouwood_one_solution.cpp)
add_executable(pleim_one_solution solutions/pleim_one_solution.cpp)
add_executable(westwheat_one_solution solutions/westwheat_one_solution.cpp)
add_executable(coldwall_one_solution solutions/coldwall_one_solution.cpp)
