# (C) 2025 A.Voß, a.voss@fh-aachen.de, info@codebasedlearning.dev

# Achtung, diese Datei nutzt die Einstellungen der globalen CMakeLists, u.a.

# cmake_minimum_required(VERSION 3.20)
# project(cpp_course LANGUAGES CXX)
# set(CMAKE_CXX_STANDARD 23)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(a1234_Matrnr_Name a1234_Matrnr_Name.cpp)
